# prototype_slenderish

./: .gitignore  :w  Cargo.toml
assets/shaders/: portal.wgsl
examples/: marching_tiles.rs
examples/common/: lib.rs
levels/: test.txt
src/: lib.rs  main.rs  noise.rs  player.rs  state.rs
src/controller/: config.rs
src/equip_item/: inventory.rs  mod.rs  player.rs
src/equip_item/world/: mod.rs  sphere.rs
src/items/: mod.rs  pickup.rs
src/items/equip/: events.rs  inventory.rs  mod.rs  player.rs
src/items/equip/world/: sphere.rs
src/items/equip/world/cube/: .portal_material.rs  mod.rs  systems.rs
src/items/equip/world/sphere/: mod.rs  systems.rs
src/npc/: mod.rs
src/player/: .inventory.rs  inventory.rs  mod.rs  view_model.rs  world.rs
src/player/equip_item/: mod.rs  player.rs  world.rs
src/player/items/: ball.rs  cube.rs  equip.rs  mod.rs
src/rtin/: binary_node.rs  mod.rs  noise.rs
src/world/: atmosphere.rs  chunks.rs  chunks2.rs  generation.rs  heap.rs  mod.rs  noise.rs  terrain.rs  wave.rs
src/world/rtin/: mod.rs
src/world/wave/: grid.rs  tile.rs
src/world/wfc/: grid.rs  heap_map.rs  mod.rs  tile.rs
