[package]
name = "prototype_slenderish"
version = "0.1.0"
edition = "2021"
default-run="prototype_slenderish"

[lib]
path="src/lib.rs"

[dependencies]
bevy = "0.14.1"
bevy-inspector-egui = "0.25.2"
bevy-tnua = "0.19.0"
bevy-tnua-rapier3d = "0.7.0"
bevy_rapier3d = {version = "0.27.0", features = [ "simd-stable", "debug-render-3d" ] }
noise = "0.9.0"
rand = "0.8.5"

[[bin]]
name = "marching_tiles"
path = "bin/marching_tiles.rs"

[[bin]]
name = "world_terrain"
path = "bin/world_terrain.rs"

[[bin]]
name = "pages"
path = "bin/pages.rs"

[profile.dev.package.bevy_rapier3d]
opt-level = 3
